# prevencao-fraudes

./: Home.py  gerar_modelo.py  gerar_previsoes.py  prevencao-fraudes.ipynb  pyproject.toml  readme.md  readmePortugues.md
dashboard/: dashboard.pbix
html/: ClientesEstado.html  ClientesSaldoSexo.html  Correlacao.html  DevedorFraude.html  DiasAtrasoFraude.html  EmprestimoFraude.html  EscolaridadeSalario.html  EstadoCivilAtraso.html  EstadoCivilFraude.html  EstadoCivilParcelas.html  FaixaEtaria.html  Faixa_EtariaFraude.html  PagasEmAtrasoFraude.html  PagasEmDiaFraude.html  ParcelasAtrasoFraude.html  ParcelasPagas.html  ParcelasPagasFraude.html  PrazoEmprestimo.html  PrazoFraude.html  PrazoRestante.html  RegiaoFraude.html  RenegociacaoFraude.html  SalarioFraude.html  SexoFraude.html  TotalPagoFraude.html
pages/: 1_Dataframe.py  2_Gráficos.py  3_Dashboard.py  4_Gráficos Prontos.py  5_AI.py
previsao/: previsoes.xlsx
screenshots/: pagasatraso-emdia  possivelfraude-estadocivil  saldodevedor-sexo
